<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/sarlavha"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/matn"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/oxirgi_muddati"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edtHolat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/holati"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#0044FF"
        android:padding="12dp"
        android:text="@string/saqlash"
        android:textSize="20sp" />

</LinearLayout>